changed the application code

--- a/templates/test.html
+++ b/templates/test.html
@@ -3,7 +3,7 @@
 
 <div class="block1">
     <h1 style="text-align: center;">Congratulations!!</h1>
-    <h1>You have successfully deployed your web application using automated CI/CD.</h1>
+    <h1>You have successfully deployed your web application using Avinash's Session.</h1>
     <BR>
     <h2 style="text-align: center;">Jenkins - AWS CodeBuild - AWS CodeDeploy</h2>
 
